--- a/georgian.html
+++ b/georgian.html
@@ -28,7 +28,8 @@
       <link rel="stylesheet" href="css/reset.css" />
       <link rel="stylesheet" href="css/fonts.css" />
       <link rel="stylesheet" href="css/style.css" />
-      <link rel="stylesheet" href="css/responsive.css" />
+      <link rel="stylesheet" href="css/georgian.css">
+      <link rel="stylesheet" href="css/responsive.css"/>
    </head>
    <body>
    <section class="section-1">
@@ -37,28 +38,28 @@
             <nav class="navigation">
                <ul id="menu" class="nav menu-ul">
                   <li>
-                     <a class="nav-a" href="#home">Home</a>
+                     <a class="nav-a" href="#home">მთავარი</a>
                   </li>
                   <li>
-                     <a class="nav-a" href="#pets">Pets</a>
+                     <a class="nav-a" href="#pets">შინაური</a>
                   </li>
                   <li>
-                     <a class="nav-a" href="#wild">Wild Animals</a>
+                     <a class="nav-a" href="#wild">გარეული</a>
                   </li>
                   <li>
-                     <a class="nav-a" href="#exotic">Exotic Animals</a>
+                     <a class="nav-a" href="#exotic">ეგზოტიკური</a>
                   </li>
                   <li>
-                     <a class="nav-a" href="#aboutme">About Us</a>
+                     <a class="nav-a" href="#aboutme">შესახებ</a>
                   </li>
                   <li>
-                     <a class="nav-a" href="#footer">Contact </a>
+                     <a class="nav-a" href="#footer">საკონტაქტო</a>
                   </li>
                   <li>
-                     <a class="nav-a" href="login.html">Login </a>
+                     <a class="nav-a" href="login.html">შესვლა</a>
                   </li>
-                  <li>
-                     <a class="nav-a" id="set" href="georgian.html"><img id="geo" src="images/georgia.svg"></a>
+                  <li>  
+                     <a class="nav-a" id="set" href="index.html"><img id="eng" src="images/english.svg"></a>
                   </li>
                </ul>
             </nav>
@@ -75,10 +76,11 @@
       </section>
    </section>
 
-      <div id="pets" class="middle-text">
-         <h2 class="middle-text-h2">Pets</h2>
-      </div>
+
       <section class="middle-section">
+         <div id="pets" class="middle-text">
+            <h2 class="middle-text-h2">შინაური ცხოველები</h2>
+         </div>
          <div class="middle-section-devider">
             <div class="slideshow-container cow-contaner">
                <div class="mySlides fade animals">
@@ -98,10 +100,12 @@
                   <img src="images/pets/cow/cow5.jpg" alt="cow" style="width: 100%" />
                </div>
                <div class="cow-div">
-                  <h1 class="cow-div-h1">COW</h1>
+                  <h1 class="cow-div-h1">ძროხა</h1>
                   <p class="cow-paragraph">
-                     Cows are four-footed and have a large body. It has two horns, two
-                     eyes plus two ears and one nose and a mouth.
+                     ძროხას აქვს ორი რქა, ოთხი ფეხი, გრძელი კუდი, დიდი ცხვირი, წყვილი თვალი და ყური. 
+                     ისინი იკვებებიან ბალახით, ფოთლებით და ბოსტნეულით და ისინი ძუძუმწოვრები არიან. 
+                     ყველაზე სასარგებლო ინგრედიენტი, რომელსაც ძროხა აწარმოებს, არის რძე. რძისგან ვამზადებთ სხვადასხვა რძის პროდუქტებს, 
+                     როგორიცაა ყველი, ნაღები, ტკბილეული.
                   </p>
                </div>
                <a class="prev" onclick="plusSlides(-1)">❮</a>
@@ -149,15 +153,15 @@
                         />
                   </div>
                   <div class="cow-div">
-                     <h1 class="cow-div-h1">Donkey</h1>
+                     <h1 class="cow-div-h1">ვირი</h1>
                      <p class="cow-paragraph">
-                        Donkeys, also called burros and asses, are found throughout the
-                        world. They are members of the Equidae family, which also
-                        includes horses and zebras.
+                        ვირი არის ოთხფეხა ცხოველი, რომელსაც აქვს 2 წვრილი თვალი, 2 წვრილი ყური, და გრძელი კუდი.
+                         ის უკვე დიდი ხანია გამოიყენება ტვირთის სატარებლად. მას შეუძლია დიდი წონისა და რაოდენობის ტვირთის ერთი ადგილიდან
+                          მეორემდე უპრობლემოდ გადაზიდვა, ამიტომ ეს ცხოველი ხშირად გვხვდება სოფლებში.
                      </p>
                   </div>
                   <a class="prev" onclick="plusSlides2(-1)">❮</a>
-                  <a class="next next-donkey" onclick="plusSlides2(1)">❯</a>
+                  <a class="next donkey-next" onclick="plusSlides2(1)">❯</a>
                </div>
 
                <div style="text-align: center">
@@ -203,10 +207,12 @@
                      />
                </div>
                <div class="cow-div">
-                  <h1 class="cow-div-h1">Horse</h1>
+                  <h1 class="cow-div-h1">ცხენი</h1>
                   <p class="cow-paragraph">
-                     They are large, strong animals, and some breeds are used to pull
-                     heavy loads. Racehorses can gallop up to 30 miles an hour.
+                     ცხენი არის ოთხფეხა ცხოველი, გრძლი ცხვირით, ორი გრძელი ყურით და მოგრძო კუდით.
+                     ცხენი უკვე დიდი ხანია გამოიყენება გადაადგილებისათვის.
+                      იგი გავრცელებულია თითქმის ყველა ქვეყანაში და საკმაოდ ძვირია.
+                     ასევე ხშირად იწყობა შეჯიბრები სადაც ცხენებს აჯიბრებენ, ამას დოღი ეწოდება.
                   </p>
                </div>
                <a class="prev" onclick="plusSlides3(-1)">❮</a>
@@ -253,18 +259,18 @@
                      />
                </div>
                <div class="cow-div">
-                  <h1 class="cow-div-h1">Sheep</h1>
+                  <h1 class="cow-div-h1">ცხვარი</h1>
                   <p class="cow-paragraph">
-                     Sheep are domesticated animals raised on farms for their wool,
-                     meat, and milk. They are happiest living together in groups called
-                     flocks.
+                     ცხვარი არის ასევე ოთხფეხა ცხოველი, მოგრძო ცხვირით, მოკლე ყურებითა და მოკლე კუდით.
+                     იგი უკვე დიდი ხანია რაც გავრცელებულია, იგი თითქმის ყველა ქვეყანაშია გავრცელებული.
+                     ამ ცხოველს ხშირად შევხვდებით ფერმებში და მინდვრებში.
+                     იგი გამოიყენება როგორც საჭმელად, ასევე მისი მატყლისგან მზადდება ძაფი.
                   </p>
                </div>
                <a class="prev" onclick="plusSlides4(-1)">❮</a>
                <a class="next" onclick="plusSlides4(1)">❯</a>
             </div>
-
-            <div style="text-align: center">
+               <div style="text-align: center">
                <span class="dot4" onclick="currentSlide4(1)"></span>
                <span class="dot4" onclick="currentSlide4(2)"></span>
                <span class="dot4" onclick="currentSlide4(3)"></span>
@@ -273,22 +279,23 @@
          </div>
       </section>
       <!-- new Section Starts --> 
-      <div id="wild" class="middle-text">
-         <h2 class="middle-text-h2">Wild Animals</h2>
-      </div>
+
       <section class="section2">
+         <div id="wild" class="middle-text">
+            <h2 class="middle-text-h2">გარეული ცხოველები</h2>
+         </div>
          <div class="bear-wrapper">
             <div class="bear-div bear">
                <div class="bear-image-div">
                   <img class="bear-image" src="images/wild/bear/bear.jpg" alt="bear">
-                  <h2 class="bear-h2">Bear</h2>
-                  <p class="bear-paragraph">Bears are mammals that belong to the family Ursidae. They can be as small as four feet long and about 60 pounds.</p>
+                  <h2 class="bear-h2">დათვი</h2>
+                  <p class="bear-paragraph">დათვები არიან ძუძუმწოვრები, რომლებიც მიეკუთვნებიან ურსიდების ოჯახს. ისინი შეიძლება იყოს ოთხი ფუტის სიგრძე და დაახლოებით 60 ფუნტი.</p>
                </div>
                <div class="bear-div lion">
                   <div class="bear-image-div">
                      <img class="bear-image" src="images/wild/lion/lion.jpg" alt="bear">
-                     <h2 class="bear-h2">Lion</h2>
-                     <p class="bear-paragraph">The lion (Panthera leo) is a large mammal of the Felidae (cat) family. Some large males weigh over 250 kg</p>
+                     <h2 class="bear-h2">ლომი</h2>
+                     <p class="bear-paragraph">ლომი (Panthera leo) — დიდი ძუძუმწოვარი ცხოველი ფელიდას (კატა) ოჯახისა. ზოგიერთი დიდი მამრი იწონის 250 კგ-ს</p>
                   </div>
                </div>
             </div>
@@ -297,57 +304,59 @@
             <div class="bear-div monkey">
                <div class="bear-image-div">
                   <img class="bear-image" src="images/wild/monkey/monkey4.jpg" alt="bear">
-                  <h2 class="bear-h2">Monkey</h2>
-                  <p class="bear-paragraph monkey-paragraph">Monkeys are tree-dwelling (arboreal) simians. They are in the primate order. Monkeys are intelligent, social animals.</p>
+                  <h2 class="bear-h2">მაიმუნი</h2>
+                  <p class="bear-paragraph monkey-paragraph">მაიმუნები ხეზე ბინადარი (არბორეული) სიმიანები არიან. ისინი პრიმატების წესრიგში არიან. მაიმუნები ინტელექტუალური, სოციალური ცხოველები არიან.</p>
                </div>
                <div class="bear-div tiger">
                   <div class="bear-image-div">
                      <img class="bear-image" src="images/wild/tiger/tiger2.jpg" alt="bear">
-                     <h2 class="bear-h2">Tiger</h2>
-                     <p class="bear-paragraph">The tiger (Panthera tigris) is the largest living cat species and a member of the genus Panthera.</p>
+                     <h2 class="bear-h2">ვეფხვი</h2>
+                     <p class="bear-paragraph">ვეფხვი (Panthera tigris) არის ყველაზე დიდი ცოცხალი კატის სახეობა და პანტერას გვარის წარმომადგენელი.</p>
                   </div>
                </div>
             </div>
          </div>
       </section>
-      <div id="exotic" class="middle-text">
-         <h2 class="middle-text-h2">Exotic Animals</h2>
-      </div>
+
       <!-- new secrion starts -->
       <section class="section2 section3">
+         <div id="exotic" class="middle-text">
+            <h2 class="middle-text-h2">ეგზოტიკური ცხოველები</h2>
+         </div>
          <div class="bear-wrapper">
             <div class="bear-div bear">
                <div class="bear-image-div">
                   <img class="bear-image" src="images/exotic/capybara/capybara.jpg" alt="bear">
-                  <h2 class="bear-h2">Capybara</h2>
-                  <p class="bear-paragraph">Capybaras are short-haired brownish rodents with blunt snouts, short legs, small ears, and almost no tail.</p>
+                  <h2 class="bear-h2">ზღვის გოჭი</h2>
+                  <p class="bear-paragraph">კაპიბარები მოკლეთმიანი მოყავისფრო მღრღნელები არიან ბლაგვი ნესტოებით, მოკლე ფეხებით, პატარა ყურებით და თითქმის კუდით.</p>
                </div>
                <div class="bear-div lion">
                   <div class="bear-image-div">
                      <img class="bear-image" src="images/exotic/kangaroo/kangaroo.jpg" alt="bear">
-                     <h2 class="bear-h2">Kangoroo</h2>
-                     <p class="bear-paragraph">Kangaroos possess powerful hind legs, a long, strong tail, and small front legs. adult kangaroo weighs between 35 - 90 kg</p>
+                     <h2 class="bear-h2">კენგურუ</h2>
+                     <p class="bear-paragraph">კენგურუებს აქვთ ძლიერი უკანა ფეხები, გრძელი, ძლიერი კუდი და პატარა წინა ფეხები. ზრდასრული კენგურუ იწონის 35-90 კგ-ს შორის</p>
                   </div>
                </div>
             </div>
          </div>
          <div class="bear-wrapper">
-         <div class="bear-div monkey">
-            <div class="bear-image-div">
-               <img class="bear-image" src="images/exotic/beaver/beaver.jpg" alt="bear">
-               <h2 class="bear-h2">Beaver</h2>
-               <p class="bear-paragraph beaver-pargraph">Beavers are among the largest living rodents in the world. They have thick fur, webbed feet and flattened, scale-covered tails.</p>
-            </div>
-            <div class="bear-div tiger">
+            <div class="bear-div monkey">
                <div class="bear-image-div">
-                  <img class="bear-image" src="images/exotic/crocodile/corocodile.jpg" alt="bear">
-                  <h2 class="bear-h2">Crocodile</h2>
-                  <p class="bear-paragraph crocodile-paragraph">Crocodiles have powerful jaws with many conical teeth and short legs. Males grow to a length of up to 6 m</p>
+                  <img class="bear-image" src="images/exotic/beaver/beaver.jpg" alt="bear">
+                  <h2 class="bear-h2">თახვი</h2>
+                  <p class="bear-paragraph beaver-pargraph">თახვები მსოფლიოში ყველაზე დიდ მღრღნელებს შორის არიან. მათ აქვთ სქელი ბეწვი</p>
+               </div>
+               <div class="bear-div tiger">
+                  <div class="bear-image-div">
+                     <img class="bear-image" src="images/exotic/crocodile/corocodile.jpg" alt="bear">
+                     <h2 class="bear-h2">ნიანგი</h2>
+                     <p class="bear-paragraph crocodile-paragraph">ნიანგებს აქვთ ძლიერი ყბა მრავალი კონუსური კბილებით და მოკლე ფეხებით. მამაკაცი იზრდება 6 მ-მდე სიგრძემდე</p>
+                  </div>
                </div>
             </div>
-         </div>
-         </div>
-      </section>
+            </div>
+         </section>
+   
 
       <section  id="aboutme" class="about-me">
 
